--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Falling Bricks",
+  "name": "FallBrix",
   "short_name": "FallBrix",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#1e3a8a",
-  "theme_color": "#3B82F6",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "icons": [
     {
